//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated from a template.
//
//     Manual changes to this file may cause unexpected behavior in your application.
//     Manual changes to this file will be overwritten if the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

namespace DriveCareCore.Data.BD
{
    using System;
    using System.Collections.Generic;
    
    public partial class CarColor
    {
        public System.Guid RowId { get; set; }
        public System.Guid CarId { get; set; }
        public System.Guid ColorId { get; set; }
        public System.DateTime StartDate { get; set; }
        public Nullable<System.DateTime> EndDate { get; set; }
        public string Description { get; set; }
        public Nullable<byte> PaintKind { get; set; }
        public string PartName { get; set; }
    
        public virtual Car Car { get; set; }
        public virtual Color Color { get; set; }
    }
}
