//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated from a template.
//
//     Manual changes to this file may cause unexpected behavior in your application.
//     Manual changes to this file will be overwritten if the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

namespace DriveCareCore.Data.BD
{
    using System;
    using System.Collections.Generic;
    
    public partial class RepairHistory
    {
        public System.Guid RowId { get; set; }
        public System.Guid CarId { get; set; }
        public Nullable<System.Guid> EmployeeId { get; set; }
        public string Title { get; set; }
        public string Description { get; set; }
        public System.DateTime RepairDate { get; set; }
        public Nullable<System.DateTime> EndDate { get; set; }
        public Nullable<int> Mileage { get; set; }
        public Nullable<decimal> Cost { get; set; }
        public Nullable<System.Guid> StatusId { get; set; }
        public System.DateTime CreatedAt { get; set; }
        public Nullable<System.Guid> CategoryId { get; set; }
    
        public virtual Car Car { get; set; }
        public virtual Employee Employee { get; set; }
        public virtual RepairCategory RepairCategory { get; set; }
        public virtual Status Status { get; set; }
    }
}
