//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated from a template.
//
//     Manual changes to this file may cause unexpected behavior in your application.
//     Manual changes to this file will be overwritten if the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

namespace DriveCareCore.Data.BD
{
    using System;
    using System.Collections.Generic;
    
    public partial class UserCarMaintenanceHistory
    {
        public System.Guid RowId { get; set; }
        public System.Guid UserCarRowId { get; set; }
        public System.DateTime ServiceDate { get; set; }
        public Nullable<int> MileageKm { get; set; }
        public string Title { get; set; }
        public string Notes { get; set; }
        public string ComponentCode { get; set; }
        public string WorkshopName { get; set; }
        public Nullable<byte> SeverityAfter { get; set; }
    }
}
